--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@material-tailwind/react": "^2.1.8",
+    "@reduxjs/toolkit": "^2.1.0",
     "@tanstack/react-table": "^8.11.7",
     "axios": "^1.6.5",
+    "pure-react-carousel": "^1.30.1",
     "razorpay": "^2.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.0",
     "react-paginate": "^8.2.0",
     "react-razorpay": "^2.0.1",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1",
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.3"
