--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1",
     "react-table": "^7.8.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "swiper": "^11.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
