--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.1.0",
     "@tanstack/react-table": "^8.11.7",
     "axios": "^1.6.5",
+    "dotenv": "^16.4.1",
     "pure-react-carousel": "^1.30.1",
     "razorpay": "^2.9.2",
     "react": "^18.2.0",
